--- a/event/templates/event/register.html
+++ b/event/templates/event/register.html
@@ -6,8 +6,8 @@
 {% block body %}
 <div class="container" style="max-width:700px; margin-top:70px; margin-bottom:10px;">
     <div class="panel panel-default">
+        <div class="form-heading">Register for an Account</div>
         <div class="panel-body">
-            <h3>Register for an Account</h3>
             {% if error_message %}
                 <p><strong class="text-danger">{{ error_message }}</strong></p>
             {% endif %}
