--- a/event/templates/event/login.html
+++ b/event/templates/event/login.html
@@ -7,8 +7,8 @@
 <div style="min-height: 100vh; display: flex; align-items: center; justify-content: center;">
     <div style="width: 100%; max-width: 700px;">
         <div class="panel panel-default">
+            <div class="form-heading">Log In</div>
             <div class="panel-body">
-                <h3>Log In</h3>
                 {% if error_message %}
                     <p><strong class="text-danger">{{ error_message }}</strong></p>
                 {% endif %}
