--- a/event/templates/event/update_profile.html
+++ b/event/templates/event/update_profile.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container" style="max-width:700px; margin-top:40px;margin-bottom:40px;">
     <div class="panel panel-default">
-        <div class="panel-heading"><h3>Update Your Profile</h3></div>
+    <div class="form-heading">Update Your Profile</div>
         <div class="panel-body">
             <form method="post" enctype="multipart/form-data" class="form-horizontal">
                 {% csrf_token %}
