--- a/event/templates/event/home.html
+++ b/event/templates/event/home.html
@@ -33,11 +33,11 @@
             {% endfor %}
         {% elif query %}
             <div class="col-sm-12">
-                <h3 class="error_message"><strong>Search did not match any event...</strong></h3>
+                <h3 class="error_message"><strong>No event found.</strong></h3>
             </div>
         {% else %}
             <div class="col-sm-12">
-                <h3 class="error_message"><strong>Search did not match any event...</strong></h3>
+                <h3 class="error_message"><strong>No event found.</strong></h3>
             </div>
         {% endif %}
     </div>
