--- a/user/templates/user/base_visitor.html
+++ b/user/templates/user/base_visitor.html
@@ -32,8 +32,8 @@
                 </div>
                 <div class="event-header-user" style="margin-left:auto;">
                     <ul class="nav navbar-nav navbar-right event-header-user-nav">
-                        <li class="{% block register_active %}{% endblock %}"><a href="{% url 'event:register' %}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
-                        <li class="{% block login_active %}{% endblock %}"><a href="{% url 'event:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+                        <li class="{% block register_active %}{% endblock %}"><a href="{% url 'user:register' %}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+                        <li class="{% block login_active %}{% endblock %}"><a href="{% url 'user:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
                     </ul>
                 </div>
             </div>
