--- a/event/templates/event/detail.html
+++ b/event/templates/event/detail.html
@@ -20,7 +20,7 @@
         <div class="card-body text-center" style="flex:1; display:flex; flex-direction:column; justify-content:flex-start;">
           <h2 class="card-title event-card-title">{{ event.name }}</h2>
           <p class="card-text event-card-location">{{ event.location }}</p>
-          <p class="card-text event-card-manager">Manager: <strong>{{ event.manager.first_name }}</strong></p>
+          <p class="card-text event-card-manager">Manager: <strong>{{ event.manager.first_name }} {{ event.manager.last_name }}</strong></p>
           <div class="info-bar event-info-bar">
             <span title="Date"><i class="glyphicon glyphicon-calendar"></i> {{ event.date }}</span>
             <span title="Time"><i class="glyphicon glyphicon-time"></i> {{ event.time }}</span>
@@ -47,7 +47,7 @@
           <div class="event-detail-row"><strong>Date:</strong> {{ event.date }}</div>
           <div class="event-detail-row"><strong>Time:</strong> {{ event.time }}</div>
           <div class="event-detail-row"><strong>Fare:</strong> <span class="event-inr">&#8377;</span> {{ event.fare }}/-</div>
-          <div class="event-detail-row"><strong>Manager:</strong> {{ event.manager.first_name }}</div>
+          <div class="event-detail-row"><strong>Manager:</strong> {{ event.manager.first_name }} {{ event.manager.last_name }}</div>
         </div>
       </div>
       <div class="panel panel-info event-panel-attendees">
