--- a/event/templates/error_base.html
+++ b/event/templates/error_base.html
@@ -39,10 +39,10 @@
             <div class="collapse navbar-collapse" id="topNavBar">
                 <ul class="nav navbar-nav">
                     <li class="{% block register_active %}{% endblock %}">
-                        <a href="{% url 'event:register' %}">Register</a>
+                        <a href="{% url 'user:register' %}">Register</a>
                     </li>
                     <li class="{% block login_active %}{% endblock %}">
-                        <a href="{% url 'event:login_user' %}">Log In</a>
+                        <a href="{% url 'user:login_user' %}">Log In</a>
                     </li>
                 </ul>
             </div>
