--- a/user/templates/user/change_wallet_pin.html
+++ b/user/templates/user/change_wallet_pin.html
@@ -13,19 +13,19 @@
                 <div class="form-group">
                     <label for="id_old_pin" class="col-sm-4 control-label">Current Pin</label>
                     <div class="col-sm-8">
-                        <input type="text" name="old_pin" id="id_old_pin" class="form-control" minlength="4" maxlength="4" pattern="\d{4}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'');" required>
+                        <input type="password" name="old_pin" id="id_old_pin" class="form-control" minlength="4" maxlength="4" pattern="\d{4}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'');" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="id_new_pin1" class="col-sm-4 control-label">New Pin</label>
                     <div class="col-sm-8">
-                        <input type="text" name="new_pin1" id="id_new_pin1" class="form-control" minlength="4" maxlength="4" pattern="\d{4}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'');" required>
+                        <input type="password" name="new_pin1" id="id_new_pin1" class="form-control" minlength="4" maxlength="4" pattern="\d{4}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'');" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="id_new_pin2" class="col-sm-4 control-label">Confirm New Pin</label>
                     <div class="col-sm-8">
-                        <input type="text" name="new_pin2" id="id_new_pin2" class="form-control" minlength="4" maxlength="4" pattern="\d{4}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'');" required>
+                        <input type="password" name="new_pin2" id="id_new_pin2" class="form-control" minlength="4" maxlength="4" pattern="\d{4}" inputmode="numeric" oninput="this.value=this.value.replace(/[^0-9]/g,'');" required>
                     </div>
                 </div>
                 <div class="form-group text-center">
