--- a/static/event/css/style.css
+++ b/static/event/css/style.css
@@ -8,7 +8,9 @@
     padding: 24px 24px;
     width: 100%;
 }
-
+.form-checkbox input[type="checkbox"] {
+    width: 10% !important;
+}
 .event-form-container {
     max-width: 700px;
     margin-top: 60px;
