--- a/event/templates/event/form_template.html
+++ b/event/templates/event/form_template.html
@@ -4,7 +4,17 @@
         {{ field.label }}{% if field.field.required %}<span class="text-danger">*</span>{% endif %}
     </label>
     <div class="col-sm-10">
-        {{ field }}
+        {% if field.field.widget.input_type == 'checkbox' %}
+            <div class="row" style="margin-left:0;">
+                {% for checkbox in field %}
+                 <label style="display: block; margin-bottom: 5px;" class="form-checkbox">
+                     {{ checkbox.tag }} {{ checkbox.choice_label }}
+                 </label>
+                {% endfor %}
+            </div>
+        {% else %}
+            {{ field }}
+        {% endif %}
         <span class="text-danger small">{{ field.errors }}</span>
     </div>
 </div>
