equipment funcationality addition

--- a/event/templates/event/base.html
+++ b/event/templates/event/base.html
@@ -101,6 +101,8 @@
                             <li><a href="{% url 'event:add_event' %}"><span class="glyphicon glyphicon-plus"></span> Add Event</a></li>
                             <li><a href="{% url 'event:add_food_item' %}"><span class="glyphicon glyphicon-cutlery"></span> Add Food Item</a></li>
                             <li><a href="{% url 'event:food_list' %}"><span class="glyphicon glyphicon-list"></span> View Food Items</a></li>
+                            <li><a href="{% url 'event:add_equipment' %}"><span class="glyphicon glyphicon-wrench"></span> Add Equipment</a></li>
+                            <li><a href="{% url 'event:equipment_list' %}"><span class="glyphicon glyphicon-list-alt"></span> View Equipment</a></li>
                         </ul>
                     </li>
                     {% endif %}
