--- a/event/templates/event/base.html
+++ b/event/templates/event/base.html
@@ -46,25 +46,6 @@
                         </a>
                     </li>                 
 
-                    <!-- Wallet Dropdown -->
-                    <li class="dropdown {% block wallet_active %}{% endblock %}">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span> Wallet <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                    <a class="dropdown-item" href="{% url 'user:add_money' %}">
-                                    Add Money
-                                </a>
-                            </li>
-                            <li>
-                                    <a class="dropdown-item" href="{% url 'user:withdraw_money' %}">
-                                    Withdraw Money
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
                     <li class="{% block past_events_active %}{% endblock %}">
                         <a href="{% url 'event:past_events' %}">
                             <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Past Events
@@ -106,7 +87,27 @@
                         </ul>
                     </li>
                     {% endif %}
-                                     
+                      
+                    <!-- Wallet Dropdown -->
+                    <li class="dropdown {% block wallet_active %}{% endblock %}">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span> Wallet <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'user:wallet_history' %}"><span class="glyphicon glyphicon-credit-card"></span> Wallet History</a></li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'user:add_money' %}">
+                                    <span class="glyphicon glyphicon-plus-sign text-success"></span> Add Money
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'user:withdraw_money' %}">
+                                    <span class="glyphicon glyphicon-minus-sign text-danger"></span> Withdraw Money
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+               
                     <li>
                         <a href="{% url 'user:logout_user' %}">
                             <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Logout
