--- a/event/templates/error_base.html
+++ b/event/templates/error_base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'event/css/style.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'event/css/style.min.css' %}"/>
 
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
