--- a/event/templates/event/base.html
+++ b/event/templates/event/base.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'event/css/style.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'event/css/style.min.css' %}"/>
 
     <!-- jQuery and Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
